--- a/calculator.css
+++ b/calculator.css
@@ -1,23 +1,53 @@
-/* calculator.css */
-
+/* Main body text elements */
 body {
 	background-color:gainsboro;
 }
 h1 {
-	color:green;
+	color:limegreen;
 	background-color:black;
 }
-#res,#buttonsContainer {
+
+/* Div containters for buttons and result display */
+#buttonsContainer {
 	width:500px;
 }
-.numButtons {
-	background-color:gray;
-}
-.button {
-	width:22%;
-	height:60px;
+#res {
+	width:500px;
+	background-color:lightgray;
 	border:solid;
-	border-width:1px;
-	margin:1px;
-	font-size:36px;
+	height:60px;
+	font-size:30px;
+}
+
+/* Button styling */
+#buttonsContainer > button {
+	width:25%;
+	height:60px;
+	margin:0px;
+	font-size:30px;
+	float:left;
+}
+.opButtons {
+	background-color:gray;
+	color:white;
+}
+.numButtons {
+	background-color:lightgreen;
+	color:brown;
+}
+.topThreeButtons {
+	background-color:darkgreen;
+	color:white;
+}
+.otherButtons {
+	background-color:black;
+	color:lightgreen;
+}
+
+/* Footer styling */
+#footerbox {
+	position:absolute;
+	bottom:10px;
+	margin-left:auto;
+	margin-right:auto;
 }
