Played around with some minor formatting, and resolved bug with simple clear mode and exp display

--- a/calculator.css
+++ b/calculator.css
@@ -4,7 +4,8 @@ body {
 }
 h1 {
 	color:limegreen;
-	background-color:black;
+	background-color:gray;
+	text-align:center;
 }
 
 /* Div containters for buttons and result display */
