--- a/calculator-2.css
+++ b/calculator-2.css
@@ -12,6 +12,7 @@ body {
 	border:1px solid;
 	height:100%;
 	background-color:gray;
+	text-align:center;
 }
 #menubar li {
 	line-height:50px;
@@ -68,6 +69,7 @@ body {
 /* Button styling */
 #buttonsContainer button {
 	font-size:30px;
+	border-radius:12px;
 }
 #btnEql {
 	grid-row:2/5;
@@ -75,7 +77,7 @@ body {
 	height:100%;
 }
 #buttonsContainer > button:hover {
-	background-color:white;
+	background-color:gainsboro;
 	color:red;
 }
 .opButtons {
